--- a/src/main/res/layout/game_summary_view.xml
+++ b/src/main/res/layout/game_summary_view.xml
@@ -90,10 +90,10 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_weight="0.5">
+                android:layout_weight="5">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -137,9 +137,10 @@
 
             <ImageButton
                 android:id="@+id/field_thumbnail_first"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5" />
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:src="@drawable/field"/>
         </LinearLayout>
 
 
