--- a/src/main/res/layout/field_summary_view.xml
+++ b/src/main/res/layout/field_summary_view.xml
@@ -1,3 +1,6 @@
+<!--
+    Author: Lindsey Liu
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
