--- a/src/main/res/layout/field_recording_view.xml
+++ b/src/main/res/layout/field_recording_view.xml
@@ -12,26 +12,29 @@
         android:layout_height="0dp"
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="15">
+        android:layout_weight="15"
+        android:paddingTop="5dip">
 
         <TextView
             android:id="@+id/my_team_name"
-            android:layout_weight="0.15"
+            android:layout_weight="0.20"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="@string/my_team_name"
-            android:gravity="center_vertical|center_horizontal"
-            android:paddingLeft="10dip"/>
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
+            android:textSize="15dip"
+            android:gravity="center_vertical|left"
+            android:paddingLeft="5dip"/>
 
         <ImageButton
-            android:layout_width="18dip"
+            android:layout_width="15dip"
             android:layout_height="match_parent"
-            android:layout_weight="0.05"
-            android:src="@drawable/ic_add_black_18dp"
-            android:scaleType="centerCrop"
+            android:layout_weight="0.04"
+            android:src="@drawable/plus_button"
+            android:scaleType="fitCenter"
             android:gravity="center_horizontal"
-            android:id="@+id/my_team_score_inc"
-            android:paddingTop="16dip" />
+            android:id="@+id/my_team_score_inc" />
 
         <TextView
             android:id="@+id/my_team_score"
@@ -39,34 +42,37 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="@string/zero"
+            android:textColor="@color/colorAccent"
+            android:textSize="16dip"
+            android:textStyle="bold"
             android:gravity="center_vertical|center_horizontal" />
 
         <ImageButton
-            android:layout_width="18dip"
+            android:layout_width="15dip"
             android:layout_height="match_parent"
-            android:layout_weight="0.05"
+            android:layout_weight="0.04"
             android:src="@drawable/ic_remove_black_18dp"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:gravity="center_horizontal"
-            android:id="@+id/my_team_score_dec"
-            android:paddingTop="16dip" />
+            android:id="@+id/my_team_score_dec" />
 
         <TextView
             android:layout_weight="0.05"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text=":"
+            android:textColor="@color/colorAccent"
+            android:textSize="15dip"
             android:gravity="center_vertical|center_horizontal" />
 
         <ImageButton
-            android:layout_width="18dip"
+            android:layout_width="15dip"
             android:layout_height="match_parent"
-            android:layout_weight="0.05"
-            android:src="@drawable/ic_add_black_18dp"
-            android:scaleType="centerCrop"
+            android:layout_weight="0.04"
+            android:src="@drawable/plus_button"
+            android:scaleType="fitCenter"
             android:gravity="center_horizontal"
-            android:id="@+id/opp_team_score_inc"
-            android:paddingTop="16dip" />
+            android:id="@+id/opp_team_score_inc" />
 
         <TextView
             android:id="@+id/opp_team_score"
@@ -74,44 +80,48 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="@string/zero"
+            android:textSize="15dip"
+            android:textColor="@color/colorAccent"
             android:gravity="center_vertical|center_horizontal" />
 
         <ImageButton
-            android:layout_width="18dip"
+            android:layout_width="15dip"
             android:layout_height="match_parent"
-            android:layout_weight="0.05"
+            android:layout_weight="0.04"
             android:src="@drawable/ic_remove_black_18dp"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:gravity="center_horizontal"
-            android:id="@+id/opp_team_score_dec"
-            android:paddingTop="16dip" />
+            android:id="@+id/opp_team_score_dec" />
 
         <TextView
             android:id="@+id/opp_team_name"
-            android:layout_weight="0.15"
+            android:layout_weight="0.20"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="@string/opp_team_name"
-            android:gravity="center_vertical|center_horizontal"
-            android:paddingRight="10dip"/>
+            android:textSize="15dip"
+            android:textColor="@color/colorAccent"
+            android:gravity="center_vertical|right"
+            android:paddingRight="5dip"/>
 
         <Spinner
             android:layout_width="0dp"
-            android:layout_weight="0.3"
+            android:layout_weight="0.25"
             android:id="@+id/half_spinner"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:textColor="@color/blackColor" />
+            android:textColor="@color/blackColor"
+            android:layout_marginBottom="7dip"/>
 
         <ImageButton
-            android:layout_width="18dip"
+            android:layout_width="15dip"
             android:layout_height="match_parent"
-            android:layout_weight="0.05"
-            android:src="@drawable/ic_stop_black_18dp"
-            android:scaleType="centerCrop"
+            android:layout_weight="0.04"
+            android:src="@drawable/stop_button"
+            android:scaleType="fitCenter"
             android:gravity="center_horizontal"
             android:id="@+id/stop_btn"
-            android:paddingTop="16dip" />
+            android:paddingRight="5dip"/>
 
     </LinearLayout>
     <!--
